fix(slider): change visible slider items & grid gaps, fix overflow, remove rotating circle text

--- a/styles/includes/_overlap.scss
+++ b/styles/includes/_overlap.scss
@@ -2,6 +2,7 @@
 
 .overlap {
 	position: relative;
+	overflow-x: hidden;
 
 	&::after {
 		@include grid-right();
